--- a/FilmBayMVC/Views/Shared/_LoginPartial.cshtml
+++ b/FilmBayMVC/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
+    bool isAdmin = DBAccess.isAdmin(User.Identity.GetUserName());
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
     @Html.AntiForgeryToken()
@@ -10,6 +11,12 @@
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        @if (isAdmin == true)
+        {
+            <li >
+                @Html.ActionLink("Admin Panel", "AdminPanel", "Admin")
+            </li>
+        }
     </ul>
     }
 }
