--- a/FilmBayMVC/Views/Admin/AdminPanel.cshtml
+++ b/FilmBayMVC/Views/Admin/AdminPanel.cshtml
@@ -29,30 +29,55 @@
 <div class="body" id="div-body" onload="('.div-body').center()">
         <div class="input-group">
             <span class="input-group-addon" id="basic-addon1">Input film title</span>
-            <input name="searchInput" id="searchInput" type="text" class="form-control" placeholder="FilmTitle" aria-describedby="basic-addon1">
+            <input name="FilmName" id="FilmName" type="text" class="form-control" aria-describedby="basic-addon1">
             <button class="buttonFilmSearch"> OK </button>
         </div>
     
 </div>
-<div style="height:1000px" class="partialView">
+<div style="height:1000px" class="partialViewDiv" id="partialViewDiv">
     @{Html.RenderPartial("_SearchResultPartial", Model);}
 </div>
+
+<div class="infoPopupPartialView" id="infoPopupPartialView" style="visibility:hidden">
+    <label onload="informationPopup(this.Text)">null</label>
+</div>
+
 <script>
     $('.buttonFilmSearch').on('click', function () {
-        alert("cycki");
-        //var categoryId = $("#ddlCategory").val();
-        // $("#dv_SearchResultPartial").load(@(Url.Action("SearchFilmResult", "Admin", null, Request.Url.Scheme)));
-            $.ajax({
-            url: '@Url.Action("SearchFilmResult", "Admin")',
-            type: 'GET',
-            //dataType: 'json',
-            // we set cache: false because GET requests are often cached by browsers
-            // IE is particularly aggressive in that respect
-            cache: false,
-            data: { filmName: $("#searchInput").val() },
-             success: function () {
-                 alert("success");
-             }
-        });
+        var filmName = $('#FilmName').val();
+        $('#partialViewDiv').load('@Url.Action("SearchFilmResult", "Admin")'+'?filmName='+filmName);
     });
-</script>
+
+    function partialViewButtonClick(e) {
+        // var id = $(e.target).id;
+        alert("test");
+    }
+
+    function informationPopup(labelText) {
+        alert(labelText);
+    }
+
+ 
+        function partialViewButtonClick(buttonId) {
+            var buttonId = buttonId;
+            var id = buttonId.substring(6, 7);
+            var filmId = document.getElementById("id" + id).textContent;
+            var title = document.getElementById("title" + id).textContent;
+            var orginalTitle = document.getElementById("orginalTitle" + id).textContent;
+            var popularity = document.getElementById("popularity" + id).textContent;
+            var releaseDate = document.getElementById("releaseDate" + id).textContent;
+            var posterPath = document.getElementById("posterPath" + id).src;
+        
+            alert(id + "," + title + "," + orginalTitle + "," + popularity + "," + releaseDate + "," + posterPath);
+
+
+            $.ajax({
+                url: '@Url.Action("AddFilmToDatabase", "Admin")' + '?id=' + filmId+'&title='+title+'&orginalTitle='+orginalTitle+'&popularity='+popularity+'&releaseDate='+releaseDate+'&posterPath='+posterPath,
+                data: {}, //parameters go here in object literal form
+                type: 'GET',
+                //datatype: 'json',
+                success: function (data) { alert('got here with data'); },
+                error: function () { alert('something bad happened'); }
+            });
+        }
+    </script>
