--- a/FilmBayMVC/Views/Admin/_SearchResultPartial.cshtml
+++ b/FilmBayMVC/Views/Admin/_SearchResultPartial.cshtml
@@ -4,16 +4,6 @@
     <tr>
         <th> Title</th>
     </tr>
-
-    @for (int i = 0; i < 10; i++)
-    {
-        <tr>
-            <td><label style="background-color:red">test</label></td>
-        </tr>
-        @*@Html.TextBoxFor(modelItem => Model[i].orginalTitle)*@
-    
-    }
-
     @if (Model != null)
     {
         for (int i = 0; i < Model.Count(); i++)
@@ -21,7 +11,47 @@
             <tr>
                 <td>
                     <label style="background-color:red">test</label>
-                    @Html.TextBoxFor(modelItem => Model[i].orginalTitle)
+                    @{
+                    String tmpOrginalTitle = "orginalTitle" + i;
+                    <label id=@tmpOrginalTitle>@Model[i].orginalTitle</label>
+                    String tmpPosterPath = "posterPath" + i;
+                    <img id=@tmpPosterPath src="@Model[i].posterPath" style="height:200px"/>
+                    }
+                    @{String tmpId = "id" + i;
+                    <label id=@tmpId style="visibility:hidden">@Model[i].id</label>
+                    }
+                </td>
+                <td>
+                    <div>
+                        <table>
+                            <tr>
+                                <td>
+                                    @{
+                                     String idReleaseDate = "releaseDate" + i;
+
+                                    <label id="@idReleaseDate">@Model[i].releaseDate</label>
+                                    }
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    @{
+                    string idTitle = "title" + i;
+                    <label id=@idTitle>@Model[i].title</label>
+                                    }
+                                </td>
+                            </tr>
+                        </table>
+
+                    </div>
+                    @{
+                        string idPopularity = "popularity"+i;
+                    <label id=@idPopularity style="visibility:hidden">@Model[i].popularity</label>
+                    }
+                    @{
+                         string idButton = "button" + i;
+                    }
+                    <button id=@idButton onclick="partialViewButtonClick(this.id)">Add to database</button>
                 </td>
             </tr>
         }
