--- a/FilmBayMVC/Views/UserPage/UserInfo.cshtml
+++ b/FilmBayMVC/Views/UserPage/UserInfo.cshtml
@@ -2,16 +2,42 @@
 @{
     ViewBag.Title = "UserInfo";
 }
+<head>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</head>
 
-<asp:Content ID="indexContent" ContentPlaceHolderID="MainContent" runat="server">
-
-    @if (Model!=null)
-    {
+<h2>My movies:</h2>
+@using (Html.BeginForm())
+{
+    <div class="container">
+        @if (Model != null)
+        {
             for (int i = 0; i < Model.Count; i++)
             {
-                <label> @Model[i].title</label>
-                
+                <div class="row">
+                    <div class="col-sm-3 col-xs-1" >
+                        <div class="row">
+                       @Model[i].title @Model[i].release_date.ToString().Substring(0, 4)
+                        </div>
+                        <div class="row">
+                            Rating:  @Model[i].rating /10
+                        </div>
+                        <div class="row">
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-xs-4">
+                        <img src="@Model[i].poster_url" class="img-responsive" style="height:175px" />
+                    </div>
+
+                </div>
             }
-    }
-    
-</asp:Content>
+        }
+    </div>
+}
+
+       
