--- a/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
+++ b/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
@@ -4,24 +4,56 @@
 }
 
 <h2>FilmPage</h2>
-
+<div class="container">
 <div class="row">
-    <div class="col-sm-4">
-        <img src="@Model.poster" class="img-responsive" style="height:160px" />
+    <div class="col-sm-2">
+        <img src="@Model.poster" class="img-responsive" style="height:230px" />
     </div>
-    <div class="col-sm-5">
-        @Html.ActionLink(@Model.Title, "FilmPage")   (@Model.ReleaseDate.ToString().Substring(0,4)
-        <br />
-        @Model.duration<br />
-        @Model.storyline<br />
-        @Model.Director<br />
-        @for(int i=0; i<Model.Writers.Count;i++)
-        {
-            Model.Writers[i].ToString();
-        }
-        @Model.ReleaseDate (WorldWide)
-    </div>
-    <div class="col-sm-5">
+    <div class="row">
+        <div class="col-sm-6">
+            @Html.ActionLink(@Model.Title, "FilmPage")   (@Model.ReleaseDate.ToString().Substring(0, 4))
 
+            <div class="row">@Model.duration</div>
+            <div class="row">
+                @Model.storyline
+            </div>
+
+            <div class="row">
+                <div class="col-sm-3">Directed By:</div><div class="col-sm-3">@Model.Director</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    Writers:
+                    @if (Model.Writers != null)
+                    {
+                        for (int i = 0; i < Model.Writers.Count; i++)
+                        {
+                            Model.Writers[i].ToString();
+                        }
+                    }
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">Released: </div><div class="col-sm-3">@Model.ReleaseDate</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">Studio: </div><div class="col-sm-3">@Model</div>
+            </div>
+
+        </div>
+        <div class="col-sm-5">
+            <ul class="pagination">
+                <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
+            </ul>
+        </div>
     </div>
-</div>
+    </div>
+
+   
+       
+    </div>
+
