--- a/FilmBayMVC/Views/Admin/AdminPanel.cshtml
+++ b/FilmBayMVC/Views/Admin/AdminPanel.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewBag.Title = "Manage Account";
 }
-@model List<FilmBayMVC.Models.MovieSearchReturnObjectViewModel>
+@model FilmBayMVC.ViewModels.ModelsKeeper
 
 <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-1.10.2.js")"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
