--- a/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
+++ b/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
@@ -7,37 +7,37 @@
 <div class="container">
 <div class="row">
     <div class="col-sm-2">
-        <img src="@Model.poster" class="img-responsive" style="height:230px" />
+        <img src="@Model.filmPageModel.poster" class="img-responsive" style="height:230px" />
     </div>
     <div class="row">
         <div class="col-sm-6">
-            @Html.ActionLink(@Model.Title, "FilmPage")   (@Model.ReleaseDate.ToString().Substring(0, 4))
+            @Html.ActionLink(@Model.filmPageModel.Title, "FilmPage")   (@Model.filmPageModel.ReleaseDate.ToString().Substring(0, 4))
 
-            <div class="row">@Model.duration</div>
+            <div class="row">@Model.filmPageModel.duration</div>
             <div class="row">
-                @Model.storyline
+                @Model.filmPageModel.storyline
             </div>
 
             <div class="row">
-                <div class="col-sm-3">Directed By:</div><div class="col-sm-3">@Model.Director</div>
+                <div class="col-sm-3">Directed By:</div><div class="col-sm-3">@Model.filmPageModel.Director</div>
             </div>
             <div class="row">
                 <div class="col-sm-3">
                     Writers:
-                    @if (Model.Writers != null)
+                    @if (Model.filmPageModel.Writers != null)
                     {
-                        for (int i = 0; i < Model.Writers.Count; i++)
+                        for (int i = 0; i < Model.filmPageModel.Writers.Count; i++)
                         {
-                            Model.Writers[i].ToString();
+                            Model.filmPageModel.Writers[i].ToString();
                         }
                     }
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">Released: </div><div class="col-sm-3">@Model.ReleaseDate</div>
+                <div class="col-sm-3">Released: </div><div class="col-sm-3">@Model.filmPageModel.ReleaseDate</div>
             </div>
             <div class="row">
-                <div class="col-sm-3">Studio: </div><div class="col-sm-3">@Model</div>
+                @*<div class="col-sm-3">Studio: </div><div class="col-sm-3">@Model</div>*@
             </div>
 
         </div>
