--- a/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
+++ b/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
@@ -2,6 +2,13 @@
 @{
     ViewBag.Title = "FilmPage";
 }
+<style>
+    .carousel-inner > .item > img,
+    .carousel-inner > .item > a > img {
+        width: 70%;
+        margin: auto;
+    }
+</style>
 
 <h2>FilmPage</h2>
 <div class="container">
@@ -108,7 +115,42 @@
 
 
     </div>
-   
-       
+    <div class="row"><br /> <br /></div>
+        <div class="row">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    @for (int i = 0; i < Model.filmPageModel.Photos.Count; i++)
+                    {
+                        string x = i.ToString();
+                        <li data-target="#myCarousel" data-slide-to="x" class="active"></li>
+                    }
+                </ol>
+
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="@Model.filmPageModel.Photos[0].photo_url" alt="Photo" height="300" width="400" class="img-responsive">
+                    </div>
+                    @for (int i = 1; i < Model.filmPageModel.Photos.Count; i++)
+                    {
+                        <div class="item ">
+                            <img src="@Model.filmPageModel.Photos[i].photo_url" alt="Photo" height="300" width="400" class="img-responsive" >
+                        </div>
+                    }
+                </div>
+
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+
     </div>
 
