--- a/FilmBayMVC/Views/UserPage/UserInfo.cshtml
+++ b/FilmBayMVC/Views/UserPage/UserInfo.cshtml
@@ -14,7 +14,7 @@
 <h2>My movies:</h2>
 @using (Html.BeginForm())
 {
-    <div class="form-horizontal">
+    <div class="form-horizontal" style="height:600px;overflow:auto">
         @if (Model != null)
         {
             for (int i = 0; i < Model.Count; i++)
