--- a/FilmBayMVC/Views/Home/Index.cshtml
+++ b/FilmBayMVC/Views/Home/Index.cshtml
@@ -1,8 +1,86 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+@model FilmBayMVC.ViewModels.ModelsKeeper
 
-<div class="jumbotron">
-   
+<style>
+    .nopadding {
+        padding-left:   0;
+        margin: 0 !important;
+    }   
+    .img-container {
+     height:100%;
+     overflow:hidden;
+}
+        .img-container img.wide {
+    height: 100%;
+    }
+    .img-container img.tall{
+        width:100%;
+    }
+
+</style>
+<div class="jumbotron" style="align-content:center;min-width:1140px">
+    <div >
+        @{
+            if (Model.filmTableList.Count() > 2)
+            {
+                <div class="row" style="height:400px; ">
+                    <div class="col-md-6" style="height:100%">
+                        <div class="row" style="background-color:red;height:60%;overflow:hidden;position:relative;z-index:2" >
+                            <div style="z-index:3">
+                                <img style="width:100%;" src=@Model.mainPageFilmPhotos[0] />
+                            </div>
+                            <div class="row" style="height:100px; left:10px;bottom:10px;z-index:6;background-color:green">
+
+                            </div>
+                            
+                        </div>
+                        <div class="row" style="background-color:green;height:40%">
+                            <div class="col-md-6 nopadding img-container" style="width:50%;background-color:brown;">
+                                <img src=@Model.mainPageFilmPhotos[2] />
+                            </div>
+                            <div class="col-md-6 nopadding img-container" style="width:50%;background-color:yellow;">
+                                <img src=@Model.mainPageFilmPhotos[3] />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6" style="background-color:aqua;height:100%">
+                        <div class="row" style="background-color:green;height:40%">
+                            <div class="col-md-6 nopadding img-container" style="width:50%;background-color:brown;">
+                                <img src=@Model.mainPageFilmPhotos[4] />
+                            </div>
+                            <div class="col-md-6 nopadding img-container" style="width:50%;background-color:yellow;">
+                                <img src=@Model.mainPageFilmPhotos[5] />
+                            </div>
+                        </div>
+                        <div class="row"  style="background-color:red;height:60%;overflow:hidden">
+                            <img style="width:100%" src=@Model.mainPageFilmPhotos[1] />
+                        </div>
+                    </div>
+                </div>
+            }
+        }
+        @*@{
+            for (int i = 0; i < Model.filmTableList.Count(); i++)
+            {
+                <div class="row">
+                    <div class="col-sm-4">
+                        <img style="max-height:250px" src=@Model.filmTableList[i].poster_url />
+                    </div>
+                </div>
+            }
+        }*@
+    </div>
 
 </div>
+
+<script>
+    window.onload = function func() {
+        $('.img-container').find('img').each(function () {
+            var imgClass = (this.width / this.height > 1) ? 'wide' : 'tall';
+            $(this).addClass(imgClass);
+        })
+    }
+
+</script>
