--- a/FilmBayMVC/Views/Home/Index.cshtml
+++ b/FilmBayMVC/Views/Home/Index.cshtml
@@ -31,8 +31,16 @@
                             <div style="z-index:3">
                                 <img style="width:100%;" src=@Model.mainPageFilmPhotos[0] />
                             </div>
-                            <div class="row" style="height:100px; left:10px;bottom:10px;z-index:6;background-color:green">
-
+                            <div class="row" style="height:100px; position:absolute; left:25px;bottom:10px;z-index:6;">
+                                <div style="height:100%" class="col-sm-2">
+                                    <img src=@Model.filmTableList[0].poster_url style="height:100%" />
+                                </div>
+                                @{
+                                     String title_0 = Model.filmTableList[0].title + Model.filmTableList[0].release_date.ToString().Substring(0, 4);
+                                }
+                                <div class="col-sm-10" style="color:white">
+                                    @title_0
+                                </div>
                             </div>
                             
                         </div>
