--- a/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
+++ b/FilmBayMVC/Views/FilmPage/FilmPage.cshtml
@@ -2,6 +2,13 @@
 @{
     ViewBag.Title = "FilmPage";
 }
+
+<script type="text/javascript" src="@Url.Content("~/Scripts/jquery-1.10.2.js")"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
+
+
 <style>
     .carousel-inner > .item > img,
     .carousel-inner > .item > a > img {
@@ -11,14 +18,19 @@
 </style>
 
 <h2>FilmPage</h2>
+
 <div class="container">
+    @{
+        String filmid = Model.filmPageModel.id.ToString();
+     }
 <div class="row">
     <div class="col-sm-2">
         <img src="@Model.filmPageModel.poster" class="img-responsive" style="height:230px" />
     </div>
     <div class="row">
         <div class="col-sm-6">
-            @Html.ActionLink(@Model.filmPageModel.Title, "FilmPage")   (@Model.filmPageModel.ReleaseDate.ToString().Substring(0, 4))
+                @Html.ActionLink(@Model.filmPageModel.Title, "FilmPage")   (@Model.filmPageModel.ReleaseDate.ToString().Substring(0, 4))
+       
             <div class="row">
                 
                     @if (Model.filmPageModel.Genres != null)
@@ -31,10 +43,16 @@
                     }
               
             </div>
-            <div class="row"><br /></div>
-            <div class="row">@Model.filmPageModel.duration</div>
+            <div class="row" id=""><br /></div>
             <div class="row">
-                @Model.filmPageModel.storyline
+                <div class="col-sm-2">
+                    @Model.filmPageModel.duration
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    @Model.filmPageModel.storyline
+                </div>
             </div>
             <div class="row"><br /></div>
             <div class="row">
@@ -44,7 +62,7 @@
                 
             @if (Model.filmPageModel.Writers != null)
             {
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                     <label> Writers:</label>
                 </div>
                 for (int i = 0; i < Model.filmPageModel.Writers.Count; i++)
@@ -60,7 +78,7 @@
                 
                 @if (Model.filmPageModel.Composers != null)
                 {
-                    <div class="col-sm-2">
+                    <div class="col-sm-3">
                         <label>Composers:</label>
                     </div>
                     for (int i = 0; i < Model.filmPageModel.Composers.Count; i++)
@@ -83,39 +101,45 @@
         </div>
         <div class="col-sm-5">
             <ul class="pagination">
-                <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
+                <li id="1" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="1" ></span></a></li>
+                <li id="2" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="2" onclick="voteClick(this.id)"></span></a></li>
+                <li id="3" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="3" onclick="voteClick(this.id)"></span></a></li>
+                <li id="4" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="4" onclick="voteClick(this.id)"></span></a></li>
+                <li id="5" onclick="voteClick(this.id)"><a href="#"><span class="glyphicon glyphicon-star" id="5" onclick="voteClick(this.id)"></span></a></li>
             </ul>
         </div>
     </div>
     </div>
     <div class="row">
+        <div class="row">
+            <br /><br />
+        </div>
+        <div class="col-sm-4">
+            <div class="row" style="height:300px;overflow-y:scroll;overflow-x:hidden">
+                @if (Model.filmPageModel.actors != null)
+                {
+                    for (int i = 0; i < Model.filmPageModel.actors.Count(); i++)
+                    {
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <img src="@Model.filmPageModel.actors[i].actor_photo_url" class="img-responsive" style="height:50px" />
+                            </div>
+                            <div class="col-sm-2">
+                                @Model.filmPageModel.actors[i].actor_name
+                                @Model.filmPageModel.actors[i].actor_surname
+                            </div>
+                        </div>
+                        <div class="row"><br /></div>
+                    }
+                }
+
+
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <br /><br />
     </div>
-    <div class="row" style="height:300px;overflow:auto">
-        @if (Model.filmPageModel.actors != null)
-        {
-            for (int i = 0; i < Model.filmPageModel.actors.Count(); i++)
-            {
-                <div class="row">
-                    <div class="col-sm-2">
-                        <img src="@Model.filmPageModel.actors[i].actor_photo_url" class="img-responsive" style="height:50px" />
-                    </div>
-                    <div class="col-sm-3">
-                        @Model.filmPageModel.actors[i].actor_name
-                        @Model.filmPageModel.actors[i].actor_surname
-                    </div>
-                </div>
-            <div class="row"><br /></div>
-            }
-        }
-
-
-    </div>
-    <div class="row"><br /> <br /></div>
         <div class="row">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
@@ -136,6 +160,7 @@
                         <div class="item ">
                             <img src="@Model.filmPageModel.Photos[i].photo_url" alt="Photo" height="300" width="400" class="img-responsive" >
                         </div>
+                        
                     }
                 </div>
 
@@ -151,6 +176,75 @@
                 </a>
             </div>
         </div>
-
+    <div class="row"><br /><br /></div>
+    <div class="row">
+        <div class="row">
+            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#AddComment">
+                Add Comment
+            </button>
+        </div>
+        <div class="row">
+            <div class="modal fade" id="AddComment" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="exampleModalLabel">Comment</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                          <div class="form-group">
+                           <textarea class="form-control" id="comment" style="width:auto"></textarea>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" onclick="commentClick()">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    
 
+
+
+  
+<script>
+    $('#AddComment').on('shown.bs.modal', function () {
+        $('#myInput').focus()
+    })
+    function voteClick(value) {
+        var number = value;
+        alert(number);
+        var filmId = document.getElementById("filmid").textContent;
+        alert(filmId);
+        $.ajax({
+
+            url: '@Url.Action("Vote", "FilmPage")' + '?number=' + number + '&filmid=' +filmid,
+            data: {}, //parameters go here in object literal form
+            type: 'GET',
+            //datatype: 'json',
+            success: function (data) { loadingDiv.style.visibility = "hidden"; alert('voted'); },
+            error: function () { loadingDiv.style.visibility = "hidden"; alert('not voted'); }
+        });
+    }
+
+
+    function commentClick() {
+        var comment = document.getElementById("comment").textContent;
+        $.ajax({
+   
+            url: '@Url.Action("Vote", "FilmPage")',
+            data: {}, //parameters go here in object literal form
+            type: 'GET',
+            //datatype: 'json',
+            success: function (data) { loadingDiv.style.visibility = "hidden"; alert('voted'); },
+            error: function () { loadingDiv.style.visibility = "hidden"; alert('not voted'); }
+        });
+    }
+
+
+</script>
